RESOLVED FIXED201514
Web Inspector: Crashes when intercept response is a 404
https://bugs.webkit.org/show_bug.cgi?id=201514
Summary Web Inspector: Crashes when intercept response is a 404
Joseph Pecoraro
Reported 2019-09-05 13:58:09 PDT
Web Inspector: Crashes when intercept response is a 404 Seems like the WebResourceLoader can sometimes go away and m_coreLoader may have gone away if the response is 400s.
Attachments
[PATCH] Proposed Fix (7.74 KB, patch)
2019-09-05 13:59 PDT, Joseph Pecoraro
achristensen: review+
achristensen: commit-queue-
Joseph Pecoraro
Comment 1 2019-09-05 13:59:21 PDT
Created attachment 378117 [details] [PATCH] Proposed Fix
Alex Christensen
Comment 2 2019-09-05 16:48:07 PDT
Comment on attachment 378117 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=378117&action=review > Source/WebKit/WebProcess/Network/WebResourceLoader.cpp:147 > + Ref<WebResourceLoader> interceptProtectedThis(*this); Please just call it protectedThis, and do it in the lambda capture: protectedThis = makeRef(*this)
Joseph Pecoraro
Comment 3 2019-09-05 19:54:04 PDT
(In reply to Alex Christensen from comment #2) > Comment on attachment 378117 [details] > [PATCH] Proposed Fix > > View in context: > https://bugs.webkit.org/attachment.cgi?id=378117&action=review > > > Source/WebKit/WebProcess/Network/WebResourceLoader.cpp:147 > > + Ref<WebResourceLoader> interceptProtectedThis(*this); > > Please just call it protectedThis, and do it in the lambda capture: > protectedThis = makeRef(*this) There is already a `protectedThis` that may or may not be moved, which is why this is named separately.
Joseph Pecoraro
Comment 4 2019-09-05 19:54:49 PDT
> > Please just call it protectedThis, and do it in the lambda capture: > > protectedThis = makeRef(*this) > > There is already a `protectedThis` that may or may not be moved, which is > why this is named separately. But I should be able to use that name again in the new lambdas.
Joseph Pecoraro
Comment 5 2019-09-06 01:23:21 PDT
Radar WebKit Bug Importer
Comment 6 2019-09-06 01:24:16 PDT
Note You need to log in before you can comment on or make changes to this bug.