Web Inspector: Crashes when intercept response is a 404 https://bugs.webkit.org/show_bug.cgi?id=201514

Reviewed by Alex Christensen.

Source/WebKit:

* WebProcess/Network/WebResourceLoader.cpp:
(WebKit::WebResourceLoader::didReceiveResponse):
Ensure the WebResourceLoader stays around during intercepts.

(WebKit::WebResourceLoader::didReceiveData):
(WebKit::WebResourceLoader::didFinishResourceLoad):
(WebKit::WebResourceLoader::didFailResourceLoad):
Only perform the work if the m_coreLoader is still alive.

LayoutTests:

* http/tests/inspector/network/local-resource-override-basic-expected.txt:
* http/tests/inspector/network/local-resource-override-basic.html:
Add a test for a 404 response override.

Canonical link: https://commits.webkit.org/215167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249567 268f45cc-cd09-0410-ab3c-d52691b4dbfc